# EspMath

./: .gitignore  CMakeLists.txt  README.md  library.properties
examples/fixed/: fixed.ino
examples/test_bench/: test_bench.h  test_bench.ino
src/: ansi.h  dsps_mulc.h  dsps_mulc_esp.h  dsps_mulc_s16.h  dsps_mulc_s16_ae32_custom.S  dsps_mulc_s16_ansi_custom.cpp  dsps_mulc_s16_esp.S  dsps_mulc_s16_esp_hs.S  dsps_mulc_s32_esp.S  esp_ansi.h  esp_array.cpp  esp_array.h  esp_dsp.h  esp_fixed_point.cpp  esp_fixed_point.h  esp_math.h  esp_opt.h  esp_rand.h  esp_rng.h
src/dsp/add/: dsps_add_esp.h  s16.S  s32.S  s8.S  sF.S
src/dsp/addc/: dsps_addc_esp.h  s16.S  s32.S  s8.S  sF.S
src/dsp/div/: dsps_div_esp.h  s16.S  s32.S  s8.S  sF.S
src/dsp/divc/: dsps_divc_esp.h  s16.S  s16I.S  s32.S  s32I.S  s8.S  s8I.S  sF.S  sFI.S
src/dsp/dopP/: dot_product.h  s16.S  sF.S
src/dsp/fixed/: converter.h  fixed2float.S  float2fixed.S  s16sF32.S  sF32s16.S
src/dsp/mul/: dsps_mul_esp.h  s16.S  s32.S  s8.S  sF.S
src/dsp/mulc/: dsps_mulc_esp.h  s16.S  s32.S  s8.S  sF.S
src/dsp/sub/: dsps_sub_esp.h  s16.S  s32.S  s8.S  sF.S
src/dsp/subc/: dsps_subc_esp.h  s16.S  s32.S  s8.S  sF.S
src/dsp/sum/: dsps_vsum_esp.h  s16.S  s32.S  s8.S
src/dsps_add/: dsps_add_esp.h  s8.S  sF.S
src/dsps_mul/: dsps_mul_esp.h  s16.S  s8.S
src/dsps_mulc/: dsps_mulc_esp.h  s16.S  s32.S  s8.S  sF.S  u8.S
src/dsps_sub/: dsps_sub_esp.h  s16.S  s32.S
